<resources>
    <string name="app_name">Assignment 1</string>
    <string name="Name">Shadow App</string>
    <string name="sender_details">SENDER DETAILS</string>
    <string name="email">Email</string>
    <string name="contact_information">Contact Information</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="next">NEXT</string>
    <string name="receiver_details">RECEIVER DETAILS</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="name">Name</string>
    <string name="review_information">Review Information</string>
</resources>