<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:background="@drawable/fab_background">

    <TextView
        android:layout_width="462dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_medium"
        android:text="@string/receiver_details"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rcvrEmailETField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_small"
        android:paddingTop="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:importantForAutofill="no"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/padding_small"/>

    <EditText
        android:id="@+id/rcvrFullNameETField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:padding="@dimen/padding_small"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/padding_small"/>

    <EditText
        android:id="@+id/rcvrContactInfoETField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_information"
        android:padding="@dimen/padding_small"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/padding_small"/>

    <EditText
        android:id="@+id/rcvrCountryETField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:importantForAutofill="no"
        android:padding="@dimen/padding_small"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/padding_small"/>

    <EditText
        android:id="@+id/rcvrAddressETField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:padding="@dimen/padding_small"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/padding_large"/>



    <Button
        android:id="@+id/rcvrNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_small"
        android:importantForAutofill="no"
        android:textStyle="bold"/>

</LinearLayout>